Fix display on iPhone

--- a/www/clock/index.html
+++ b/www/clock/index.html
@@ -62,7 +62,7 @@
         width: 70%;
         margin: 0 auto;
       }
-      #clock > img {
+      #clock img {
         width: 100%;
       }
       #scoreContainer {
