Add Roman to/past face

--- a/www/clock/index.html
+++ b/www/clock/index.html
@@ -177,6 +177,7 @@
         <img src="clock-face.png"/>
         <img src="clock-face-roman.png"/>
         <img src="clock-face-to-past.png"/>
+        <img src="clock-face-roman-to-past.png"/>
       </div>
       <img id="minuteHand" src="minute-hand.png" />
       <img id="hourHand" src="hour-hand.png" />
