--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
     <head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
         <title>netcetera: the home of Simon Whitaker</title>
-        <style type="text/css" media="screen">
-            @import url("netcetera.css");
-        </style>
+		<link rel="stylesheet" href="netcetera.css" />
     </head>
     <body>
         <div id="header">
@@ -32,7 +30,7 @@
             </ul>
         </div>
         <div id="footer">
-            <p>"My name is Simon" image by <a href"http://www.flickr.com/photos/debaird/239460742/in/photostream/">debaird</a>.</p>
+            <p><em>My name is Simon</em> image by <a href="http://www.flickr.com/photos/debaird/239460742/in/photostream/">debaird</a>.</p>
         </div>
     </body>
 </html>
