--- a/index.html
+++ b/index.html
@@ -16,17 +16,12 @@
             <p>
                 I'm Simon Whitaker, a software developer from Oxfordshire, UK.
             </p>
-            <h2>Geeky stuff</h2>
+            <h2>Misc bits and bobs</h2>
             <ul>
-                <li><a href="http://simonwhitaker.github.com/finally-safari-ext/">Finally</a> - a Safari extension to add pithy epithets to your <a href="http://www.apple.com">www.apple.com</a> browsing experience.</li>
-                <li><a href="http://github.com/simonwhitaker/tween-o-matic">Tween-o-Matic</a> - an OS X app for designing CAMediaTimingFunction curves</li>
-                <li><a href="camtf-playground.html">CAMediaTimingFunction playground</a> - a web-based version of Tween-o-Matic</li>
-                <li><a href="http://github.com/simonwhitaker/PyAPNs">PyAPNS</a> - a Python library for interacting with the Apple Push Notification service</li>
-                <li><a href="http://github.com/simonwhitaker/fancypants">fancypants</a> - a library of data visualation trinkets in a number of languages - see some <a href="oecd-broadband.html">sample output</a></li>
-                <li><a href="http://search.cpan.org/dist/Amazon-SQS-Simple/">Amazon::SQS::Simple</a> - an object-oriented Perl API for accessing the Amazon Simple Queue Service</li>
-                <li><a href="http://search.cpan.org/dist/App-CLI-Toolkit/">App::CLI::Toolkit</a> - a Perl helper module for generating command-line utilities</li>
-                <li><a href="http://search.cpan.org/dist/File-Iterator/">File::Iterator</a> - an object-oriented Perl module for iterating across files in a directory tree</li>
-                <li><a href="http://rubyforge.org/projects/filecache/">filecache</a> - a pure Ruby file-based caching library</li>
+                <li><a href="/whiteboard/">Whiteboard</a> - a little whiteboard app written in HTML and JS. I can't even remember why I wrote this, but it's fun, so...</li>
+                <li><a href="/clock/">Clock Game</a> - a simple game to help children learn to tell the time on an analog clock face</li>
+                <li><a href="/dice.html">Times Table Dice</a> - I wrote this to help my daughter get familiar with her times tables.</li>
+                <li><a href="/bane.html">Bane</a> - a collection of colourful quotes from reviewers trying to describe Bane's voice in The Dark Knight Rises</li>
             </ul>
         </div>
         <div id="footer">
