--- a/dice.html
+++ b/dice.html
@@ -67,7 +67,7 @@
         }
     </script>
 </head>
-<body onload="roll()">
+<body onload="init()">
     <div id="nav">
         <a href="?table=2">2x table</a> |
         <a href="?table=3">3x table</a> |
