--- a/bingo.html
+++ b/bingo.html
@@ -86,6 +86,9 @@
 
   <script>
     const BALL_CLASS = "ball";
+    const PICKED_CLASS = "picked";
+    const LATEST_CLASS = "latest";
+
     let lastPickedNumber = 0;
     let numbers = [...Array(91).keys()].slice(1);
     shuffleArray(numbers);
@@ -117,12 +120,14 @@
     function nextBall() {
       if (numbers.length > 0) {
         const n = numbers.pop();
-        document.getElementById(id(n)).classList.add("latest");
+        document.getElementById(id(n)).classList.add(LATEST_CLASS);
         if (lastPickedNumber > 0) {
           document
             .getElementById(id(lastPickedNumber))
-            .classList.remove("latest");
-          document.getElementById(id(lastPickedNumber)).classList.add("picked");
+            .classList.remove(LATEST_CLASS);
+          document
+            .getElementById(id(lastPickedNumber))
+            .classList.add(PICKED_CLASS);
         }
         lastPickedNumber = n;
       }
@@ -134,7 +139,7 @@
 
       const balls = document.getElementsByClassName(BALL_CLASS);
       for (const ball of balls) {
-        ball.classList.remove("latest", "picked");
+        ball.classList.remove(LATEST_CLASS, PICKED_CLASS);
       }
       lastPickedNumber = 0;
     }
