--- a/bingo.html
+++ b/bingo.html
@@ -54,9 +54,12 @@
         color: #777;
       }
       .latest {
-        border: 2px solid yellow;
+        border: 5px solid yellow;
         background-color: green;
         color: yellow;
+        width: 60px;
+        height: 60px;
+        line-height: 60px;
       }
       .picked {
         background-color: #444;
