--- a/index.html
+++ b/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en-GB">
-    <head>
-        <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-        <title>netcetera: the home of Simon Whitaker</title>
-		<link rel="stylesheet" href="netcetera.css" />
-    </head>
-    <body>
-        <div id="header">
-            <img src="images/my-name-is-simon.png" width="960" height="147" alt="My Name Is Simon">
-        </div>
-        <div id="mugshot">
-            <img src="images/simon-drawn.png" alt="Simon Drawn">
-        </div>
-        <div id="content">
-            <p>
-                I'm Simon Whitaker, a software developer from Oxfordshire, UK.
-            </p>
-            <h2>Misc bits and bobs</h2>
-            <ul>
-                <li><a href="/whiteboard/">Whiteboard</a> - a little whiteboard app written in HTML and JS. I can't even remember why I wrote this, but it's fun, so...</li>
-                <li><a href="/clock/">Clock Game</a> - a simple game to help children learn to tell the time on an analog clock face</li>
-                <li><a href="/dice.html">Times Table Dice</a> - I wrote this to help my daughter get familiar with her times tables.</li>
-                <li><a href="/bane.html">Bane</a> - a collection of colourful quotes from reviewers trying to describe Bane's voice in The Dark Knight Rises</li>
-            </ul>
-        </div>
-        <div id="footer">
-            <p><em>My name is Simon</em> image by <a href="http://www.flickr.com/photos/debaird/239460742/in/photostream/">debaird</a>.</p>
-        </div>
-    </body>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <title>netcetera: the home of Simon Whitaker</title>
+    <link rel="stylesheet" href="netcetera.css" />
+  </head>
+  <body>
+    <div id="header">
+      <img
+        src="images/my-name-is-simon.png"
+        width="960"
+        height="147"
+        alt="My Name Is Simon"
+      />
+    </div>
+    <div id="mugshot">
+      <img src="images/simon-drawn.png" alt="Simon Drawn" />
+    </div>
+    <div id="content">
+      <p>I'm Simon Whitaker, a software developer from Oxfordshire, UK.</p>
+      <h2>Misc bits and bobs</h2>
+      <ul>
+        <li>
+          <a href="/whiteboard/">Whiteboard</a> - a little whiteboard app
+          written in HTML and JS. I can't even remember why I wrote this, but
+          it's fun, so...
+        </li>
+        <li>
+          <a href="/clock/">Clock Game</a> - a simple game to help children
+          learn to tell the time on an analog clock face
+        </li>
+        <li>
+          <a href="/dice.html">Times Table Dice</a> - I wrote this to help my
+          daughter get familiar with her times tables.
+        </li>
+        <li>
+          <a href="/bane.html">Bane</a> - a collection of colourful quotes from
+          reviewers trying to describe Bane's voice in The Dark Knight Rises
+        </li>
+        <li>
+          <a href="/bingo.html">Bingo</a> - a random number generator for
+          British-style (90 number) bingo.
+        </li>
+        <li>
+          <a href="/camtf-playground.html">CAMediaTimingFunction Playground</a>
+          - a little doo-dah for designing
+          <code>CAMediaTimingFunction</code> parameters.
+        </li>
+      </ul>
+    </div>
+    <div id="footer">
+      <p>
+        <em>My name is Simon</em> image by
+        <a href="http://www.flickr.com/photos/debaird/239460742/in/photostream/"
+          >debaird</a
+        >.
+      </p>
+    </div>
+  </body>
 </html>
